--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,14 @@
-numpy
-collections
-tls_client
-json
-requests
-asyncio
-catboost
-xgboost
-scikit-learn
 discord
 discord.py
+requests
+asyncio
+datetime
+openai
+numpy
+scikit-learn
+xgboost
+catboost
+tls_client
+typing
+openai
+pandas
